fix: form-title span spacing

--- a/junglebar/src/app/components/booking-form/booking-form.component.scss
+++ b/junglebar/src/app/components/booking-form/booking-form.component.scss
@@ -67,6 +67,9 @@
   }
 }
 
-span {
-  border-color: var(--black) !important;
+.form-title span {
+  text-decoration: underline 6px solid var(--black); /* Schwarzer Strich mit 6px Dicke unter dem Wort "Take" */
+  text-underline-offset: 5px; /* optional, um den Abstand zwischen dem Text und dem Strich anzupassen */
+  border-color: transparent !important; /* Um den gelben Strich zu entfernen */
 }
+
